support Java 8 also